infrastructure/post-node-port-service.yml
apiVersion: v1
kind: Service
metadata:
  name: post-np-srv
spec:
  type: NodePort
  selector:
    app: posts #select pods with label posts
  ports:
    - name: posts # This could be any name
      protocol: TCP
      port: 8071 # Port of the service itself (NodePort Service)
      targetPort: 8081 # Port of the Pod, where the traffic will be redirected
      nodePort: 30081 # Port for external access, its the port on the node(machine) of the cluster
