infrastructure/post-service.yml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  type: NodePort
  selector:
    app: posts #select pods with label posts
  ports:
    - name: posts # This could be any name
      protocol: TCP
      port: 8081
      targetPort: 8081
