infrastructure/query-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl #name of the deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query #find/manage all the pods with label app=query
  template:
    metadata:
      labels:
        app: query #deployment should create this type of pods with label app=query
    spec:
      containers:
        - name: query
          image: blog-query-service:01
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv #name of the service
spec:
  selector:
    app: query #find/manage all the pods with label app=query
  type: ClusterIP #optional (default value)
  ports:
    - name: query
      port: 8083 #Node port
      targetPort: 8083 #port of the container
